--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-new-resource></app-new-resource>
+<div class="container">
+  <div class="top">
+    <div class="right">
+      <app-new-resource></app-new-resource>
+      <app-resources-type></app-resources-type>
+    </div>
+    <app-resource-details class="left"></app-resource-details>
+  </div>
+</div>
