--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,11 +11,28 @@ body {
 }
 
 .container {
-  width: 80%;
+  width: 90%;
   margin: 0 auto;
 }
 
 figure img {
   width: 100%;
   object-fit: contain;
+}
+
+.top {
+  width: 100%;
+  display: flex;
+  gap: 2.1rem;
+}
+
+.right {
+  width: 46%;
+  display: flex;
+  flex-direction: column;
+  gap: 2.1rem;
+}
+
+.left {
+  width: 52%;
 }
