implement nav bar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <app-nav></app-nav>
   <div class="top">
     <div class="right">
       <app-new-resource></app-new-resource>
