implement header for schedule

--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -1,4 +1,17 @@
 <div class="container">
+  <div class="schedule-header">
+    <div class="text">
+      <h4>حدد مواعيد العمل للمورد</h4>
+      <p>
+        تكوين إعدادات الأسبوع الخاص بك هنا. ما عليك سوى تحريك أشرطة التمرير
+        وإضافة / إزالة أوقات الراحة لإعداد ساعات العمل.
+      </p>
+    </div>
+    <div class="buttons">
+      <a href="">إعدادات متقدمة</a>
+      <button>اعدادات تقليدية</button>
+    </div>
+  </div>
   <ul>
     <li *ngFor="let day of weekDays">
       <label class="switch">
